--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "🍕 Experienced yummy foods? Share the taste by introducing the restaurants you visited.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+		"start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/pedrogrammer/yumspot/issues"
   },
-  "homepage": "https://github.com/pedrogrammer/yumspot#readme"
+  "homepage": "https://github.com/pedrogrammer/yumspot#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.1"
+  }
 }
