--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "🍕 Experienced yummy foods? Share the taste by introducing the restaurants you visited.",
   "main": "app.js",
   "scripts": {
-		"start": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   }
 }
